kubernetes/ingress/web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    kubernetes.io/ingress.global-static-ip-name: "readnocry"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    networking.gke.io/managed-certificates: "ssl-certificate"
spec:
  rules:
    - host: "readnocry.com"
      http:
        paths:
          - path: /callback/update
            pathType: ImplementationSpecific
            backend:
              service:
                name: telegram-app-service
                port:
                  number: 8084
  defaultBackend:
    service:
      name: web-app-service
      port:
        number: 8070
